<resources>
    <string name="app_name">WIFI自检工具</string>

    <string name="tab_detect">网络体验</string>
    <string name="tab_deep_detect">高级检测</string>
    <string name="tab_speed">网速检测</string>
    <string name="tab_feedback">问题反馈</string>

    <!--检测-->
    <string name="detect_result_ok">正常</string>
    <string name="detect_result_error">故障</string>
    <string name="detect_24G">2.4G</string>
    <string name="detect_5G">5G</string>
    <string name="barcode_warn">您还未连接WIFI</string>
    <string name="ap_users">%1$s&#160;&#160;&#160;&#160;在线%2$s人</string>

    <!--测速-->
    <string name="speed_downloading">正在测试下载速度...</string>
    <string name="speed_uploading">正在测试上传速度...</string>
    <string name="speed_IP">IP地址</string>
    <string name="speed_MAC">MAC地址</string>
    <string name="speed_subnet">子网掩码</string>
    <string name="speed_bandwidth">相当于%dM带宽</string>
    <string name="speed_level1">网络很快，您的坐骑为%s</string>
    <string name="speed_download">下载速度</string>
    <string name="speed_upload">上传速度</string>
    <string name="speed_prepared">-Mb</string>

    <!--问题反馈-->
    <string name="feedback_hint">请描述您遇到的问题</string>
    <string name="feedback_add_picture">添加图片</string>
    <string name="feedback_add_voice">语音反馈</string>
    <string name="feedback_voice">按住 说话</string>
    <string name="feedback_voice_pressed">松开 结束</string>
    <string name="feedback_voice_retry">重新录音</string>
    <string name="feedback_voice_time">%ss</string>
    <string name="feedback_submint">提交</string>
    <string name="feedback_phone">手机号码（非必填）</string>
    <string name="feedback_phone_tip">请输入手机号码</string>

    <!--权限-->
    <string name="permisson_wifi">没有定位权限，无法获取WIFI</string>
    <string name="permisson_storage">没有读取文件权限</string>
    <string name="permisson_audio">没有录音权限</string>

</resources>
