<?xml version="1.0" encoding="utf-8"?>
<com.autofit.widget.FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="26px"
    android:paddingRight="26px">

    <com.autofit.widget.View
        android:layout_width="229px"
        android:layout_height="120px"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="66px"
        android:background="@drawable/ic_logo" />

    <com.autofit.widget.EditText
        android:id="@+id/feedback_content"
        android:layout_width="match_parent"
        android:layout_height="330px"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="221px"
        android:background="@drawable/bg_detect"
        android:gravity="top|left"
        android:hint="@string/feedback_hint"
        android:paddingLeft="5px"
        android:paddingTop="10px"
        android:textColorHint="#2b2b2b"
        android:textSize="30px" />

    <com.autofit.widget.TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="605px"
        android:text="@string/feedback_add_picture"
        android:textColor="#aaaaaa"
        android:textSize="24px" />

    <com.autofit.widget.RecyclerView
        android:id="@+id/feedback_recycler"
        android:layout_width="match_parent"
        android:layout_height="125px"
        android:layout_marginLeft="1px"
        android:layout_marginTop="648px" />

    <com.autofit.widget.TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="827px"
        android:text="@string/feedback_add_voice"
        android:textColor="#aaaaaa"
        android:textSize="24px" />

    <com.autofit.widget.TextView
        android:id="@+id/feedback_voice_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="827px"
        android:text="@string/feedback_voice_retry"
        android:textColor="#aa0000"
        android:textSize="24px" />

    <com.autofit.widget.Button
        android:id="@+id/feedback_voice"
        android:layout_width="696px"
        android:layout_height="81px"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="874px"
        android:background="@drawable/bg_voice_sel"
        android:gravity="center"
        android:text="@string/feedback_voice"
        android:textColor="@color/cl_voice"
        android:textSize="30px" />

    <com.autofit.widget.Button
        android:id="@+id/feedback_submit"
        android:layout_width="696px"
        android:layout_height="66px"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="1097px"
        android:background="@drawable/bg_submint"
        android:gravity="center"
        android:text="@string/feedback_submint"
        android:textColor="#fff"
        android:textSize="36px" />

    <com.autofit.widget.FrameLayout
        android:id="@+id/feedback_voice_time_layout"
        android:layout_width="248px"
        android:layout_height="248px"
        android:layout_gravity="center"
        android:background="@drawable/ic_fk_yy"
        android:visibility="gone">

        <com.autofit.widget.TextView
            android:id="@+id/feedback_voice_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="190px"
            android:text="1s"
            android:textColor="#fff"
            android:textSize="30px" />

    </com.autofit.widget.FrameLayout>
</com.autofit.widget.FrameLayout>
