<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.autofit.widget.RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.autofit.widget.ImageView
            android:id="@+id/barcode"
            android:layout_width="60px"
            android:layout_height="60px"
            android:layout_alignParentRight="true"
            android:layout_marginRight="25px"
            android:layout_marginTop="85px"
            android:padding="15px"
            android:scaleType="fitXY"
            android:src="@drawable/ic_gz_ewm" />

        <com.autofit.widget.ImageView
            android:id="@+id/scan_barcode"
            android:layout_width="60px"
            android:layout_height="60px"
            android:layout_alignParentRight="true"
            android:layout_marginRight="95px"
            android:layout_marginTop="85px"
            android:padding="15px"
            android:scaleType="fitXY"
            android:src="@drawable/ic_gz_sys" />

        <com.autofit.widget.View
            android:layout_width="220px"
            android:layout_height="115px"
            android:layout_marginLeft="18px"
            android:layout_marginTop="48px"
            android:background="@drawable/ic_logo" />

        <com.autofit.widget.View
            android:layout_width="261px"
            android:layout_height="261px"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="167px"
            android:background="@drawable/ic_gz_tb3" />

        <com.autofit.widget.View
            android:id="@+id/detect_radar"
            android:layout_width="261px"
            android:layout_height="261px"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="167px"
            android:background="@drawable/ic_gz_tb2" />

        <com.autofit.widget.View
            android:layout_width="64px"
            android:layout_height="71px"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="262px"
            android:background="@drawable/ic_gz_tb1" />

        <com.autofit.widget.LinearLayout
            android:id="@+id/advice_layout"
            android:layout_width="696px"
            android:layout_height="0px"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="492px"
            android:background="@drawable/bg_detect"
            android:orientation="vertical">

            <include
                layout="@layout/ly_wifi"
                android:layout_width="696px"
                android:layout_height="109px"
                android:layout_centerHorizontal="true" />

            <com.autofit.widget.TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25px"
                android:layout_marginTop="25px"
                android:text="解决建议"
                android:textColor="#e70241"
                android:textSize="24px" />

            <com.autofit.widget.TextView
                android:id="@+id/advice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25px"
                android:layout_marginTop="24px"
                android:lineSpacingExtra="10px"
                android:text="1/lksdjflkskldfsd\n2slfklsdjfklasjdfsd"
                android:textColor="#e70241"
                android:textSize="30px" />

        </com.autofit.widget.LinearLayout>

        <com.autofit.widget.RelativeLayout
            android:layout_width="696px"
            android:layout_height="230px"
            be
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25px"
            android:background="@drawable/bg_detect"
            android:gravity="center_vertical">

            <com.autofit.widget.TextView
                android:id="@+id/speed_download"
                android:layout_width="348px"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/speed_prepared"
                android:textColor="#e70241"
                android:textSize="42px" />

            <com.autofit.widget.TextView
                android:layout_width="348px"
                android:layout_height="wrap_content"
                android:layout_below="@id/speed_download"
                android:gravity="center_horizontal"
                android:text="@string/speed_download"
                android:textColor="#757575"
                android:textSize="24px" />

            <com.autofit.widget.TextView
                android:id="@+id/speed_upload"
                android:layout_width="348px"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center_horizontal"
                android:text="@string/speed_prepared"
                android:textColor="#e70241"
                android:textSize="42px" />

            <com.autofit.widget.TextView
                android:layout_width="348px"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/speed_upload"
                android:layout_below="@id/speed_upload"
                android:gravity="center_horizontal"
                android:text="@string/speed_upload"
                android:textColor="#757575"
                android:textSize="24px" />

        </com.autofit.widget.RelativeLayout>

        <com.autofit.widget.LinearLayout
            android:layout_width="696px"
            android:layout_height="wrap_content"
            android:layout_below="@id/advice_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="27px"
            android:background="@drawable/bg_detect"
            android:orientation="vertical">

            <include
                android:id="@+id/wifi"
                layout="@layout/ly_wifi"
                android:layout_width="696px"
                android:layout_height="109px"
                android:layout_gravity="center_horizontal" />

            <com.autofit.widget.RecyclerView
                android:id="@+id/wifiRecycler"
                android:layout_width="696px"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

        </com.autofit.widget.LinearLayout>

    </com.autofit.widget.RelativeLayout>

</ScrollView>
